main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

}
/* Reuse Styles for entire page
#FFCB77 Color:Peach 
#60B2E5 Color:Blue
*/
/*Header/Logo Section Goes Here*/

/*Header/Logo Section Goes Here*/

header {
  display: flex;
  justify-content: flex-start;
  padding: 1em;
}

.hero_banner {
  background-image:linear-gradient(rgba(255, 255, 255, 0.829), rgba(255, 255, 255, 0.418)), url(./images/banner.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  width: 100vw;
  height: 80vh;
  display: flex;
  justify-content: space-between;
  position: relative;
  margin-bottom: 50px;
}

.logo {
  display: flex;
  height: 4em;
  width: 8em;
}

.hero_banner h1 {
  font-size: 5em;
  color: black;
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
  font-family: 'Bungee Inline', cursive;
  text-transform: uppercase;
  text-shadow: 5px 3px 5px #1394a5;
}

.color_w {
  color:#e45225;
  text-shadow: 4px 3px 5px #000;
}

/*Main Body Section Starts Here*/

body {
  font-family: Arial;
  line-height: 1.2em;
}

.container {
  margin: 30px auto 0 auto;
  Width: 80%;
}

h1, h3 {
  text-align: center;
}

h1 {
  margin-bottom: 0px auto 50px auto;
}

h3 {
  margin: 40px 0;
  font-size: 22px;
}

p {
  margin: 0 auto;
  font-size: 18px;
}

.imgcontainer {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.photo {
  opacity: 1;
  display: block;
  width: 100%;
  height: 250px;
  transition: .2s ease;
  backface-visibility: hidden;

}

.img {
  width: 100%;
  margin: 2.5px;
  position: relative;
  margin-top: 25px;
}
.overlay {
  background: rgba(0,0,0,0.4);
  transition: .2s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  z-index: 5;
  width: 100%;
  height: 100%;
}

.photo:hover {
  opacity: 0.3;
}

.overlay:hover {
  opacity: 1;
}

.text {
  color: white;
  font-size: 17px;
  padding: 16px 32px;
  margin-top: 50%;
  background-color: #f1aa57;
}

/* Footer Section Starts Here*/

#footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: #0B5563;
  font-size: 12pt;
  font-weight: bold;
  font-style: italic;
  padding: 12px;
  margin-top: 50px;
}

#footer ul {
  text-decoration: none;
}

#footer ul li {
  display: inline;
  padding: 15px;
}

#footer a:link {
  color: #fff;
  text-decoration: none;
}

#footer a:visited {
  color: #E83151;
  text-decoration: none;
}

#footer a:hover {
  color: #FFCB77;
  text-decoration: none;
}

.foothead {
  margin-right: 45px;
  color: #fff;
}
/* Media Starts Below */

/* Media Starts Below */

/* Mobile Styles */

@media only screen and (max-width: 400px) {
  body {
    color: black;
    background-color: #FFCB77;
    /* Yellow */
    font-weight: normal;
    font-size: 14px;
  }
  /* Logo should do a 180 spin when hovered */
  .front {
    transform: rotate3d(180deg);
    transition: 2s;
  }

  .logo:hover {
    transform: rotateY(180deg);
  }

  .logo:hover::after {
    transform: rotateY(-180deg);
  }

  .hero_banner {
    width: 100vw;
    height: 30vh;
  }
  .hero_banner h1 {
    font-size: 1.80em;
    line-height: 1.3em;
  }
}

/* Tablet Styles */

@media only screen and (min-width: 401px) and (max-width: 960px) {
  body {
    background-color: #60B2E5;
    /* Blue*/
  }
  /* Logo should flip on the y axis */
  .logo {
    transform: rotateY(180deg);
    transition-duration: 2s;
  }
  .hero_banner {
    width: 100vw;
    height: 60vh;
  }
  .hero_banner h1 {
    font-size: 3.70em;
    line-height: 1.1em;
    padding: 20px;
  }
}
  
/* Desktop Styles */

@media only screen and (min-width: 961px) {
  body {
    color: white;
    background-color: #5E5C6C;
    /* Gray */
    font-weight: bold;
    font-size: 16px;
  }
  /* Logo should get slightly larger and then go back to normal size */
  .logoDisplay {
    animation: 1.5s ease 1 normal botGrows;
    position: absolute;
  }
  @keyframes botGrows {
    from {
      transform: scale(1);
    }
    to {
      transform: scale(2);
    }
  }
}

